bg image alignment issue fixed and Link for github is added.

--- a/views/style.scss
+++ b/views/style.scss
@@ -4,6 +4,7 @@ html{
   .title{
     text-align: center;
     font-size: 24px;
+    margin-bottom: 0px;
   }
 }
 .container{
@@ -25,6 +26,15 @@ html{
   display: none;
   >h3{
     text-align: center;
+  }
+}
+.github{
+  text-align: center;
+  >a{
+   img{
+     width:32px;
+     height:32px;
+   }
   }
 }
 @media (max-width: 767px) {
